--- a/maticpoc-college/package.json
+++ b/maticpoc-college/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "log4js": "^4.3.1",
     "mongodb": "^3.0.10",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "web3": "^0.20.7"
   }
 }
