--- a/maticpoc-college/local_modules/deploy-contracts/package.json
+++ b/maticpoc-college/local_modules/deploy-contracts/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Mphasis",
+  "author": "Kirito",
   "license": "ISC",
   "devDependencies": {
     "fs": "0.0.1-security",
